# chat-rag-explorer

./: .allowed_models  .env.example  .gitignore  .models_list  CHANGELOG.md  CHANGELOG.txt  CLAUDE.md  PREWORK.md  README.md  config.py  main.py  noxfile.py  pyproject.toml  release-please-config.json
.github/workflows/: test.yml
chat_rag_explorer/: __init__.py  chat_history_service.py  logging.py  prompt_service.py  rag_config_service.py  routes.py  services.py
chat_rag_explorer/static/: script.js  settings.js  style.css
chat_rag_explorer/templates/: about.html  index.html  settings.html
data/chroma_db_sample/da228a79-94f3-4455-a10a-739d069e9b56/: index_metadata.pickle
data/corpus/ai_engineer_open_textbooks/: 01-ai-engineering.md  02-core-concepts.md  03-development-environment.md  04-ai-capabilities-limitations.md  05-openai-api-complete-guide.md  06-anthropic-claude-api-mastery.md  07-google-gemini-api-guide.md  08-api-design-patterns.md  09-fundamental-prompt-engineering.md  10-advanced-prompting-strategies.md  11-structured-output-generation.md  16-multi-agent-systems.md  (+20 more)
docs/: PREWORK.md  RAG.md
docs/adr/: adr-2025-12-20-01.txt  adr-2025-12-20-02.txt  adr-2025-12-20-03.txt  adr-2025-12-20-04.txt  adr-2025-12-20-05.txt  adr-2025-12-20-06.txt  adr-2025-12-20-07.txt  adr-2025-12-20-08.txt  adr.template.txt
tests/unit/: test_chat_history_service.py  test_config.py  test_ingest.py  test_logging.py  test_main.py  test_prompt_service.py  test_rag_config_service.py  test_rag_routes.py  test_routes.py  test_services.py
utils/: README.md  ingest.py  split.py
(+355 files in other folders)
